chore(build): fix workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,5 +41,5 @@ jobs:
       env:
         BASEPATH: infra
         IMAGE_NAME: armory/spud-stories:sha-${{ steps.sha_short.outputs.sha_short }}
-      runs: |
+      run: |
         ./bin/update-infra.sh
