--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,15 +19,23 @@ jobs:
       id: sha_short
       run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
-    - name: Build & Push Docker Image
-      uses: docker/build-push-action@v1
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USER }}
         password: ${{ secrets.DOCKERHUB_PASS }}
-        registry: index.docker.io
-        repository: armory/spud-stories
-        add_git_labels: true
-        tags: sha-${{ steps.sha_short.outputs.sha_short }}
+
+   - name: Build and push
+     uses: docker/build-push-action@v2
+     with:
+       push: true
+       tags: armory/spud-stories:sha-${{ steps.sha_short.outputs.sha_short }}
 
     - name: Checkout Infra Repository
       uses: actions/checkout@v2
