--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Setup YQ
+      uses: chrisdickinson/setup-yq@latest
+
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
