--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,5 +52,6 @@ jobs:
       env:
         BASEPATH: infra
         IMAGE_NAME: armory/spud-stories:sha-${{ steps.sha_short.outputs.sha_short }}
+        WITHPUSH: yes
       run: |
         ./bin/update-infra.sh
